testdata/zkc/invalid/constant_invalid_04.zkc
;;error:2:22-27:cyclic defintion
const u8 LARGE = 1 * LARGE
